Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-17284

lu_object_attr()) ASSERTION( ((o)->lo_header->loh_attr & LOHA_EXISTS) != 0 during migration

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.16.0
    • None
    • None
    • 3
    • 9223372036854775807

      PID: 7929     TASK: ffffa28dc513d500  CPU: 0    COMMAND: "mdt00_021"
       #0 [ffffa28dc5143a90] panic at ffffffff850b9786
          /tmp/kernel/kernel/panic.c: 299
       #1 [ffffa28dc5143b20] mdt_reint_migrate at ffffffffc0ee39ee [mdt]
          /home/lustre/master-mine/lustre/mdt/mdt_reint.c: 1939
       #2 [ffffa28dc5143d18] mdt_reint_rec at ffffffffc0eed37f [mdt]
          /home/lustre/master-mine/lustre/mdt/mdt_reint.c: 3109
       #3 [ffffa28dc5143d40] mdt_reint_internal at ffffffffc0ebca7c [mdt]
          /home/lustre/master-mine/libcfs/include/libcfs/libcfs_debug.h: 120
       #4 [ffffa28dc5143d78] mdt_reint at ffffffffc0ec6aa8 [mdt]
          /home/lustre/master-mine/lustre/mdt/mdt_handler.c: 3130
       #5 [ffffa28dc5143da0] tgt_request_handle at ffffffffc08099f8 [ptlrpc]
          /home/lustre/master-mine/lustre/include/lu_target.h: 653
       #6 [ffffa28dc5143e18] ptlrpc_main at ffffffffc07610b3 [ptlrpc]
          /home/lustre/master-mine/lustre/include/lustre_net.h: 2421
       #7 [ffffa28dc5143f10] kthread at ffffffff850d5199
          /tmp/kernel/kernel/kthread.c: 340
       #8 [ffffa28dc5143f50] ret_from_fork at ffffffff8560019f
          /tmp/kernel/arch/x86/entry/entry_64.S: 325
      

            bzzz Alex Zhuravlev
            bzzz Alex Zhuravlev
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: